--- a/tools/user-admin/user-admin.css
+++ b/tools/user-admin/user-admin.css
@@ -79,9 +79,9 @@
   font-family: var(--code-font-family);
   font-size: var(--detail-size-xs);
   padding: var(--spacing-50) var(--spacing-100);
-  background-color: var(--gray-200);
+  background-color: light-dark(var(--gray-200), var(--gray-700));
   border-radius: var(--rounding-s);
-  color: var(--gray-800);
+  color: light-dark(var(--gray-800), var(--gray-200));
 }
 
 #users .user-details {
@@ -139,7 +139,7 @@
 }
 
 .user-admin .roles-checkbox-group label:hover {
-  background-color: var(--gray-100);
+  background-color: light-dark(var(--gray-100), var(--gray-700));
 }
 
 .user-admin .roles-checkbox-group input[type="checkbox"] {
